# pyclim-NorESM

./: .gitignore  .gitmodules  README.md  enviroment.yaml  pyproject.toml  setup.py
conf_files/: synda_conf.yaml
examples/: AHT_noresm_cmor.py  AtmosEnergyTransp_noresm_cmor.py  atmospheric_transport_functions.py  general_util_funcs.py  reading_routines_noresm.py  regrid_functions.py  timeseries_noresm_cmor.py  timeseries_noresm_raw.py
pyclim-noresm/: NCO2x4frc2_f09_tn14_keyclim_snowtimeseries.nc  atmospheric_transport_functions.py  cmor_regrid_files.py  general_util_funcs.py  reading_routines_noresm.py  regrid_functions.py  timeseries_noresm_cmor.py  timeseries_noresm_raw.py
pyclim-noresm/functions/: general_util_funcs.py  general_utils_funcs.py
pyclim-noresm/reading-noresmdata/: read_noresm_cmor.py  read_noresm_raw.py  reading_routines_noresm.py  test2.nc
pyclim_noresm/: aerosol_feedbacks.py  aerosol_forcing.py  atmospheric_transport_functions.py  general_util_funcs.py  reading_routines_noresm.py  regrid_functions.py
pyclim_noresm/data_search/: find_models.py  get_missing_models.py
