[tool.poetry]
name = "pyclim-noresm"
version = "0.1.1"
description = "Tools and functions for working with climate model output"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
xarray = "^2022.3.0"
dask = "^2022.5.0"
typer = "^0.4.1"
netCDF4 = "^1.5.8"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
